--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,16 @@
-name = "SpidersMessageEncoding"
+name = "SpidersMessageCodec"
 uuid = "9d30338e-3560-4e91-a403-22803ac6b660"
 authors = ["Darryl Gamroth <dgamroth@rubus.ca>"]
 version = "0.1.0"
+
+[deps]
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
+MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+
+[compat]
+EnumX = "1.0.4"
+MappedArrays = "0.4.2"
+StaticArrays = "1.9.8"
+StringViews = "1.3.4"
