--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SpidersMessageCodecs"
 uuid = "9d30338e-3560-4e91-a403-22803ac6b660"
 authors = ["Darryl Gamroth <dgamroth@rubus.ca>"]
-version = "0.4.2"
+version = "0.5.0"
 
 [deps]
 EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
@@ -9,8 +9,12 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MappedArrays = "dbb5928d-eab1-5f90-85c2-b9b0edb7c900"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StringViews = "354b36f9-a18e-4713-926e-db85100087ba"
+SymbolConverters = "0b0e1d30-6475-4286-a107-4b7aba88ddd2"
 UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
 ValSplit = "0625e100-946b-11ec-09cd-6328dd093154"
+
+[extensions]
+SpidersMessageCodecsExt = ["LinearAlgebra", "SymbolConverters"]
 
 [compat]
 EnumX = "1.0.4"
