--- a/Project.toml
+++ b/Project.toml
@@ -17,3 +17,18 @@ ValSplit = "0625e100-946b-11ec-09cd-6328dd093154"
 SpidersMessageCodecsExt = "LinearAlgebra"
 
 [compat]
+EnumX = "1.0"
+MappedArrays = "0.4"
+StaticArrays = "1.9"
+StaticStrings = "0.2"
+StringViews = "1.3"
+UnsafeArrays = "1.0"
+ValSplit = "0.1"
+julia = "1.9"
+
+[extras]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "BenchmarkTools"]
